--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <div class="box">
         <div class="signUp">
             <div class="header">
-                <i class="fas fa-globe"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true"
+                    role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 36 36">
+                    <path
+                        d="M26.54 18a19.38 19.38 0 0 0-.43-4h3.6a12.3 12.3 0 0 0-.67-1.6h-3.35a19.72 19.72 0 0 0-2.89-5.87a12.3 12.3 0 0 0-2.55-.76a17.83 17.83 0 0 1 3.89 6.59h-5.39V5.6h-1.5v6.77h-5.39a17.83 17.83 0 0 1 3.9-6.6a12.28 12.28 0 0 0-2.54.75a19.72 19.72 0 0 0-2.91 5.85H6.94A12.3 12.3 0 0 0 6.26 14h3.63a19.38 19.38 0 0 0-.43 4a19.67 19.67 0 0 0 .5 4.37H6.42A12.34 12.34 0 0 0 7.16 24h3.23a19.32 19.32 0 0 0 2.69 5.36a12.28 12.28 0 0 0 2.61.79A17.91 17.91 0 0 1 12 24h5.26v6.34h1.5V24H24a17.9 17.9 0 0 1-3.7 6.15a12.28 12.28 0 0 0 2.62-.81A19.32 19.32 0 0 0 25.61 24h3.2a12.34 12.34 0 0 0 .74-1.6H26a19.67 19.67 0 0 0 .54-4.4zm-9.29 4.37h-5.74a17.69 17.69 0 0 1-.09-8.4h5.83zm7.24 0h-5.74V14h5.83a18.21 18.21 0 0 1 .42 4a18.12 18.12 0 0 1-.51 4.37z"
+                        class="clr-i-outline clr-i-outline-path-1" fill="currentColor" />
+                    <path d="M18 2a16 16 0 1 0 16 16A16 16 0 0 0 18 2zm0 30a14 14 0 1 1 14-14a14 14 0 0 1-14 14z"
+                        class="clr-i-outline clr-i-outline-path-2" fill="currentColor" />
+                </svg>
                 <span style="font-weight: bold;">
                     TESCA
                 </span>
@@ -31,7 +38,12 @@
                 <label>Password</label>
                 <input type="password" name="password" class="inputText" id="password"
                     placeholder="Enter Your Password">
-                <i class="far fa-eye showPassword" id="showPassword"></i>
+                <svg width="1em" height="1em" viewBox="0 0 1024 1024" class="showPassword" id="showPassword">
+                    <path
+                        d="M396 512a112 112 0 1 0 224 0a112 112 0 1 0-224 0zm546.2-25.8C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 0 0 0 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3c7.7-16.2 7.7-35 0-51.5zM508 688c-97.2 0-176-78.8-176-176s78.8-176 176-176s176 78.8 176 176s-78.8 176-176 176z"
+                        fill="currentColor" />
+                </svg>
+                <!-- <i class="far fa-eye showPassword" id="showPassword"></i> -->
                 <br>
                 <div class="forget">
                     <span class="forgetP">
@@ -63,13 +75,14 @@
     </div>
 </body>
 <script>
-    const showPassword = document.querySelector('#showPassword');
-    const password = document.querySelector('#password');
+    const showPassword = document.getElementById('showPassword');
+    const password = document.getElementById('password');
 
     showPassword.addEventListener('click', function (e) {
         const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
         password.setAttribute('type', type);
-        this.classList.toggle('fa-eye-slash');
+        this.classList.toggle('showPasswordColor')
+        // showPassword.style.color = 'blue';
     });
 </script>
 
