--- a/index.html
+++ b/index.html
@@ -37,11 +37,21 @@
                 <label>Password</label>
                 <input type="password" name="password" class="inputText" id="password"
                     placeholder="Enter Your Password">
-                <svg width="1em" height="1em" viewBox="0 0 1024 1024" class="showPassword" id="showPassword">
-                    <path
-                        d="M396 512a112 112 0 1 0 224 0a112 112 0 1 0-224 0zm546.2-25.8C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 0 0 0 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3c7.7-16.2 7.7-35 0-51.5zM508 688c-97.2 0-176-78.8-176-176s78.8-176 176-176s176 78.8 176 176s-78.8 176-176 176z"
-                        fill="currentColor" />
-                </svg>
+                <span onclick="PassShow('icon')" class="showPassword" id="showPassword">
+                    <svg id="iconShow" style="display: none;" width="1em" height="1em" viewBox="0 0 1024 1024">
+                        <path
+                            d="M396 512a112 112 0 1 0 224 0a112 112 0 1 0-224 0zm546.2-25.8C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 0 0 0 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3c7.7-16.2 7.7-35 0-51.5zM508 688c-97.2 0-176-78.8-176-176s78.8-176 176-176s176 78.8 176 176s-78.8 176-176 176z"
+                            fill="currentColor" />
+                    </svg>
+                    <svg id="iconHide" style="display: block" width="1em" height="1em" viewBox="0 0 1024 1024">
+                        <path
+                            d="M508 624a112 112 0 0 0 112-112c0-3.28-.15-6.53-.43-9.74L498.26 623.57c3.21.28 6.45.43 9.74.43zm370.72-458.44L836 122.88a8 8 0 0 0-11.31 0L715.37 232.23Q624.91 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 0 0 0 51.5q56.7 119.43 136.55 191.45L112.56 835a8 8 0 0 0 0 11.31L155.25 889a8 8 0 0 0 11.31 0l712.16-712.12a8 8 0 0 0 0-11.32zM332 512a176 176 0 0 1 258.88-155.28l-48.62 48.62a112.08 112.08 0 0 0-140.92 140.92l-48.62 48.62A175.09 175.09 0 0 1 332 512z"
+                            fill="currentColor" />
+                        <path
+                            d="M942.2 486.2Q889.4 375 816.51 304.85L672.37 449A176.08 176.08 0 0 1 445 676.37L322.74 798.63Q407.82 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 0 0 0-51.5z"
+                            fill="currentColor" />
+                    </svg>
+                </span>
                 <br>
                 <div class="forget">
                     <span class="forgetP">
@@ -76,10 +86,23 @@
     const showPassword = document.getElementById('showPassword');
     const password = document.getElementById('password');
 
+    function PassShow(i) {
+
+        var iconHide = i + 'Hide';
+        var iconShow = i + 'Show';
+
+        if (document.getElementById(iconHide).style.display === 'none') {
+            document.getElementById(iconShow).style.display = 'none';
+            document.getElementById(iconHide).style.display = 'block';
+        } else {
+            document.getElementById(iconShow).style.display = 'block';
+            document.getElementById(iconHide).style.display = 'none';
+        }
+    }
+
     showPassword.addEventListener('click', function (e) {
         const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
         password.setAttribute('type', type);
-        this.classList.toggle('showPasswordColor')
     });
 </script>
 
